--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 #divEmail, #divSenha, #divEmailCadastro, #divSenhaCadastro, #divConfirmacaoSenha, #divTituloDaNovaAnotacao {
-    position: relative;
+    position:relative;
 }
 
 #imgLogo {
@@ -316,4 +316,15 @@ body {
     display: flex;
     justify-content: end;
     margin: 4vh 3vh 0 0 !important;
+}
+
+/* CSS Menasgem de Erro*/
+#mensagemErro{
+    font-size: 16px;
+    color: red; /* Cor para a mensagem de erro */
+    text-align: center;
+    top: 55%;
+    position: absolute;
+    font-family: Roboto;
+   
 }
